create adduser screen and view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GDGDevFestMVP</string>
+    <string name="action_settings">Settings</string>
+    <string name="save">Save</string>
 </resources>
