--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="user_not_found">User not found</string>
     <string name="user_saved">User saved</string>
     <string name="user_name_required_message">user name required</string>
+    <string name="users">Users</string>
 </resources>
